--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
               </li>
               <li class="list-item">
                 <ion-icon name="checkmark-circle-outline"></ion-icon>
-                <span>Kid-friendl </span>y
+                <span>Kid-friendly </span>
               </li>
             </ul>
           </div>
