--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- SEARCH ENGINE   -->
+    <meta
+      name="description"
+      content="omnifood is an AI powered food subscription"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./Final Images/favicon.png" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -19,7 +25,7 @@
     />
     <link rel="stylesheet" href="general.css" />
     <link rel="stylesheet" href="queries.css" />
-    <title>Omnifood</title>
+    <title>Omnifood &mdash; Never cook Again !</title>
   </head>
   <body>
     <!-- NAVIGATION -->
