--- a/index.html
+++ b/index.html
@@ -78,8 +78,12 @@
               eat healthy again. Tailored to your personal tastes and
               nutritional needs.
             </p>
-            <a href="#" class="btn btn-full mr-sm">Start eating Well</a>
-            <a href="#" class="btn btn-outline">Learn More &darr;</a>
+            <a href="#section-meals" class="btn btn-full mr-sm"
+              >Start eating Well</a
+            >
+            <a href="#section-testimonials" class="btn btn-outline"
+              >Learn More &darr;</a
+            >
 
             <div class="delivered-meals">
               <div class="deliverted-imgs">
