--- a/index.html
+++ b/index.html
@@ -545,12 +545,13 @@
                 first meal is on us!
               </div>
 
-              <form class="cta-form">
+              <form class="cta-form" name="sign-up" netlify>
                 <div>
                   <label for="full-name">Full Name</label>
                   <input
                     id="full-name"
                     type="text"
+                    name="full-name"
                     required
                     placeholder="John Smith"
                   />
@@ -562,13 +563,14 @@
                     required
                     id="email-address"
                     type="email"
+                    name="email"
                     placeholder="me@example.com"
                   />
                 </div>
 
                 <div>
                   <label for="select-where">Where did you here from us?</label>
-                  <select id="select-where" required>
+                  <select id="select-where" required name="Traffic Form">
                     <option value="">Please choose one option</option>
                     <option value="friends">Friends and Family</option>
                     <option value="youtube">Youtube Video</option>
